<resources>
    <string name="app_name">Random Users</string>
    <string name="user_image">User image</string>
    <string name="connectivity_error">Connectivity Error</string>
    <string name="server_error">Server Error: %1$s</string>
    <string name="unknown_error">Unknown Error: %1$s</string>
    <string name="search_view_hint">Search…</string>
    <string name="toolbar_main_title">CONTACTOS</string>
    <string name="detail_user_name">Nombre y apellidos</string>
    <string name="detail_email">Email</string>
    <string name="detail_gender">Género</string>
    <string name="detail_register_date">Fecha de registro</string>
    <string name="detail_phone">Teléfono</string>
    <string name="gender_male">Hombre</string>
    <string name="gender_female">Mujer</string>
</resources>