<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.rsanchezdev.domain.dto.user.User" />

        <variable
            name="user"
            type="User" />

        <variable
            name="userName"
            type="String" />

        <variable
            name="gender"
            type="String" />

        <variable
            name="date"
            type="String" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBackgroundImage"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:contentDescription="@string/user_image"
                android:scaleType="centerCrop"
                android:src="@drawable/background_detail_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/user_image"
                android:src="@drawable/ic_arrow_back_white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUserName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="11dp"
                android:background="@null"
                android:fontFamily="@font/sf_pro_text_medium"
                android:includeFontPadding="false"
                android:text="@{userName}"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/ivBackButton"
                app:layout_constraintStart_toEndOf="@id/ivBackButton"
                app:layout_constraintTop_toTopOf="@id/ivBackButton"
                tools:text="Andrés Martinez" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/sivUserImage"
                android:layout_width="77dp"
                android:layout_height="77dp"
                app:layout_constraintStart_toStartOf="@id/ivBackgroundImage"
                app:layout_constraintTop_toBottomOf="@id/ivBackgroundImage"
                android:translationY="-40dp"
                android:layout_marginStart="16dp"
                android:padding="2dp"
                app:strokeWidth="2dp"
                app:strokeColor="@color/white"
                app:shapeAppearanceOverlay="@style/circleImageView"
                app:url="@{user.picture.large}"
                tools:src="@drawable/ic_launcher_background"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivEditBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/ivBackgroundImage"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_edit"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivCameraBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/ivEditBtn"
                app:layout_constraintEnd_toStartOf="@id/ivEditBtn"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_camera"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_formUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/tv_formUserNameTitle"
                app:layout_constraintBottom_toBottomOf="@id/tv_formUserName"
                app:layout_constraintStart_toStartOf="@id/sivUserImage"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_user"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_formUserNameTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/sivUserImage"
                app:layout_constraintStart_toEndOf="@id/iv_formUserName"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/gray"
                android:textSize="14sp"
                android:fontFamily="@font/sf_pro_text_light"
                android:text="@string/detail_user_name"
                android:includeFontPadding="false"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_formUserName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_formUserNameTitle"
                app:layout_constraintStart_toStartOf="@id/tv_formUserNameTitle"
                app:layout_constraintEnd_toEndOf="@id/tv_formUserNameTitle"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:fontFamily="@font/sf_pro_text_medium"
                android:text="@{userName}"
                tools:text="Andrés Martinez"
                android:includeFontPadding="false"
                android:layout_marginTop="8dp"/>

            <View
                android:id="@+id/vUserNameSeparator"
                android:layout_width="0dp"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@id/tv_formUserName"
                app:layout_constraintStart_toStartOf="@id/tv_formUserName"
                app:layout_constraintEnd_toEndOf="@id/tv_formUserName"
                android:layout_marginTop="10dp"
                android:background="@color/lightGray"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_formEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/tv_formEmailTitle"
                app:layout_constraintBottom_toBottomOf="@id/tv_formEmail"
                app:layout_constraintStart_toStartOf="@id/iv_formUserName"
                android:src="@drawable/ic_email"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_formEmailTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/vUserNameSeparator"
                app:layout_constraintStart_toStartOf="@id/tv_formUserNameTitle"
                app:layout_constraintEnd_toEndOf="@id/tv_formUserNameTitle"
                android:layout_marginTop="15dp"
                android:textColor="@color/gray"
                android:textSize="14sp"
                android:fontFamily="@font/sf_pro_text_light"
                android:text="@string/detail_email"
                android:includeFontPadding="false"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_formEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_formEmailTitle"
                app:layout_constraintStart_toStartOf="@id/tv_formEmailTitle"
                app:layout_constraintEnd_toEndOf="@id/tv_formEmailTitle"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:fontFamily="@font/sf_pro_text_medium"
                android:text="@{user.email}"
                tools:text="andres.martinez@example.com"
                android:includeFontPadding="false"
                android:layout_marginTop="8dp"/>

            <View
                android:id="@+id/vEmailSeparator"
                android:layout_width="0dp"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@id/tv_formEmail"
                app:layout_constraintStart_toStartOf="@id/tv_formUserName"
                app:layout_constraintEnd_toEndOf="@id/tv_formUserName"
                android:layout_marginTop="10dp"
                android:background="@color/lightGray"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_formGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/tv_formGenderTitle"
                app:layout_constraintBottom_toBottomOf="@id/tv_formGender"
                app:layout_constraintStart_toStartOf="@id/iv_formUserName"
                android:src="@drawable/ic_female"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_formGenderTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/vEmailSeparator"
                app:layout_constraintStart_toStartOf="@id/tv_formUserNameTitle"
                app:layout_constraintEnd_toEndOf="@id/tv_formUserNameTitle"
                android:layout_marginTop="15dp"
                android:textColor="@color/gray"
                android:textSize="14sp"
                android:fontFamily="@font/sf_pro_text_light"
                android:text="@string/detail_gender"
                android:includeFontPadding="false"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_formGender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_formGenderTitle"
                app:layout_constraintStart_toStartOf="@id/tv_formGenderTitle"
                app:layout_constraintEnd_toEndOf="@id/tv_formGenderTitle"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:fontFamily="@font/sf_pro_text_medium"
                android:text="@{gender}"
                tools:text="Hombre"
                android:includeFontPadding="false"
                android:layout_marginTop="8dp"/>

            <View
                android:id="@+id/vGenderSeparator"
                android:layout_width="0dp"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@id/tv_formGender"
                app:layout_constraintStart_toStartOf="@id/tv_formUserName"
                app:layout_constraintEnd_toEndOf="@id/tv_formUserName"
                android:layout_marginTop="10dp"
                android:background="@color/lightGray"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_formRegisterDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/tv_formRegisterDateTitle"
                app:layout_constraintBottom_toBottomOf="@id/tv_formRegisterDate"
                app:layout_constraintStart_toStartOf="@id/iv_formUserName"
                android:src="@drawable/ic_calendar"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_formRegisterDateTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/vGenderSeparator"
                app:layout_constraintStart_toStartOf="@id/tv_formUserNameTitle"
                app:layout_constraintEnd_toEndOf="@id/tv_formUserNameTitle"
                android:layout_marginTop="15dp"
                android:textColor="@color/gray"
                android:textSize="14sp"
                android:fontFamily="@font/sf_pro_text_light"
                android:text="@string/detail_register_date"
                android:includeFontPadding="false"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_formRegisterDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_formRegisterDateTitle"
                app:layout_constraintStart_toStartOf="@id/tv_formRegisterDateTitle"
                app:layout_constraintEnd_toEndOf="@id/tv_formRegisterDateTitle"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:fontFamily="@font/sf_pro_text_medium"
                android:text="@{date}"
                tools:text="11/05/2018"
                android:includeFontPadding="false"
                android:layout_marginTop="8dp"/>

            <View
                android:id="@+id/vRegisterDateSeparator"
                android:layout_width="0dp"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@id/tv_formRegisterDate"
                app:layout_constraintStart_toStartOf="@id/tv_formUserName"
                app:layout_constraintEnd_toEndOf="@id/tv_formUserName"
                android:layout_marginTop="10dp"
                android:background="@color/lightGray"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_formPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/tv_formPhoneTitle"
                app:layout_constraintBottom_toBottomOf="@id/tv_formPhone"
                app:layout_constraintStart_toStartOf="@id/iv_formUserName"
                android:src="@drawable/ic_phone"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_formPhoneTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/vRegisterDateSeparator"
                app:layout_constraintStart_toStartOf="@id/tv_formRegisterDateTitle"
                app:layout_constraintEnd_toEndOf="@id/tv_formRegisterDateTitle"
                android:layout_marginTop="15dp"
                android:textColor="@color/gray"
                android:textSize="14sp"
                android:fontFamily="@font/sf_pro_text_light"
                android:text="@string/detail_phone"
                android:includeFontPadding="false"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_formPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_formPhoneTitle"
                app:layout_constraintStart_toStartOf="@id/tv_formPhoneTitle"
                app:layout_constraintEnd_toEndOf="@id/tv_formPhoneTitle"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:fontFamily="@font/sf_pro_text_medium"
                android:text="@{user.phone}"
                tools:text="+34 655582716"
                android:includeFontPadding="false"
                android:layout_marginTop="8dp"/>

            <View
                android:id="@+id/vPhoneSeparator"
                android:layout_width="0dp"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@id/tv_formPhone"
                app:layout_constraintStart_toStartOf="@id/tv_formUserName"
                app:layout_constraintEnd_toEndOf="@id/tv_formUserName"
                android:layout_marginTop="10dp"
                android:background="@color/lightGray"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>